--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,15 @@
 
     <title>Transform Your Brand with Creative Design | Jef - Designer</title>
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKPRJ0QWHP"></script>
+ <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MS7ZN2XYC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-YKPRJ0QWHP');
+    gtag('config', 'G-7MS7ZN2XYC');
+  </script>
   </script>
 
   <body>
