Added Google Tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
     <title>Transform Your Brand with Creative Design | Jef - Designer</title>
   </head>
  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MS7ZN2XYC"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GDSVR1FKH0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-7MS7ZN2XYC');
-  </script>
+    gtag('config', 'G-GDSVR1FKH0');
   </script>
 
   <body>
